# 64All

./: .gitignore  64All.spec  64all.spec  README.md  build.sh  gitlogic.py  main.py  package.sh  primary_window.py  pyproject.toml  repos.yaml  theme_setter.py
.github/workflows/: build_and_release.yml
Render96/: repos.yaml
config/: repos.yaml
config/NonFunctional/: sm64alo.yaml  sm64plus.yaml
config/repos/: render96.yaml  sm64ex.yaml
scripts/: appimage.sh  build.sh  new.build.sh
src/: main.py
src/Qt/: build_option_utils.py  git_utils.py  primary_window.py
src/core/: buildlogic.py  check_dependencies.py  dependency_utils.py  distrobox.py  gitlogic.py  romfinder.py  singleton.py
src/logic/: buildlogic.py  check_dependencies.py  romfinder.py
src/ui/: build_manager.py  build_option_utils.py  git_progress.py  git_utils.py  primary_window.py  repo_manager.py  signal_connections.py  ui_components.py  ui_setup.py  uiutils.py
src/ui/UIManagers/: build_options_management.py  cloning_management.py  color_management.py  output_text_management.py  repo_info_management.py
