[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.30"
ttkthemes = "^3.2.2"
Pillow = "^10.0.1"
darkdetect = "0.8.0"
pyyaml = "6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"