[tool.poetry]
name = "64All"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "core", from = "src" },
    { include = "ui", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.5"
gitpython = "^3.1.30"
pyyaml = "6.0.2"
pyqt6 = "^6.7.1"
distro = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_main = "main:main"